<resources>
    <string name="app_name">DavidMagicApp</string>

    <string name="default_error">There was an application error</string>
    <string name="tv_cardTitle">Card: </string>
    <string name="expansion">Expansion: </string>
    <string name="cost">cost</string>
    <string name="name">name</string>
    <string name="set">set</string>
    <string name="toughness">toughness</string>
    <string name="power">power</string>
    <string name="description">description</string>
    <string name="show_card">show card</string>
    <string name="hide_card">hide card</string>
    <string name="search_card">search card</string>
    <string name="dices">Dices</string>
    <string name="cards">Cards</string>
    <string name="add_life_1">+1</string>
    <string name="decrement_life_1">-1</string>
    <string name="card_request">Please, enter the name of the card</string>
    <string name="card_name">Card name</string>
    <string name="search">Search</string>
    <string name="reset_counters">reset counters</string>
    <string name="buy_card">buy card</string>
    <string name="exact_text_warning">Please make sure you provide the EXACT name of the expansion</string>
    <string name="mock_booster_pack">mock booster pack</string>
    <string name="eur">eur</string>
    <string name="usd">usd</string>
    <string name="tix">tix</string>
    <string name="buy">Buy</string>
    <string name="shops">shops</string>
    <string name="shop_list">Shop List</string>
    <string name="shop">Shop: </string>
    <string name="address">Address: </string>
    <string name="phone">Phone: </string>
    <string name="google_maps_pkg">com.google.android.apps.maps</string>
    <string name="no_expansion_error">This activity needs an expansion name</string>
</resources>
