<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/warningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:gravity="center"
        android:text="@string/exact_text_warning"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cardName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints="@string/card_name"
        android:hint="@string/card_name"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/warningText"
        app:layout_constraintStart_toStartOf="@id/warningText"
        app:layout_constraintTop_toBottomOf="@id/warningText"
        android:inputType="text" />

    <Button
        android:id="@+id/searchCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/search_card"
        app:layout_constraintEnd_toEndOf="@id/cardName"
        app:layout_constraintStart_toStartOf="@id/cardName"
        app:layout_constraintTop_toBottomOf="@id/cardName" />

</androidx.constraintlayout.widget.ConstraintLayout>