<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/cardPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/name"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardPhoto" />

    <TextView
        android:id="@+id/nameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/name"
        app:layout_constraintTop_toTopOf="@id/name" />

    <TextView
        android:id="@+id/manaCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/cost"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/costValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/manaCost"
        app:layout_constraintTop_toTopOf="@id/manaCost" />


    <TextView
        android:id="@+id/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/set"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/manaCost" />

    <TextView
        android:id="@+id/setValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/set"
        app:layout_constraintTop_toTopOf="@id/set"/>

    <TextView
        android:id="@+id/toughness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:textSize="22sp"
        android:text="@string/toughness"
        app:layout_constraintTop_toBottomOf="@id/set"
        app:layout_constraintStart_toStartOf="@id/set" />

    <TextView
        android:id="@+id/toughnessValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/toughness"
        app:layout_constraintTop_toTopOf="@id/toughness"/>

    <TextView
        android:id="@+id/power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:textSize="22sp"
        android:text="@string/power"
        app:layout_constraintStart_toStartOf="@id/toughness"
        app:layout_constraintTop_toBottomOf="@id/toughness"/>

    <TextView
        android:id="@+id/powerValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/power"
        app:layout_constraintTop_toTopOf="@id/power"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/power"/>

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:scrollbars="vertical"
        android:textSize="18sp"
        android:autoSizeTextType="none"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/power"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="0"/>

</androidx.constraintlayout.widget.ConstraintLayout>