<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/eur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/eur"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@id/usd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/eurValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/eur"
        app:layout_constraintStart_toStartOf="@id/eur"
        app:layout_constraintTop_toBottomOf="@id/eur" />

    <TextView
        android:id="@+id/usd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usd"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@id/tix"
        app:layout_constraintStart_toEndOf="@id/eur"
        app:layout_constraintTop_toTopOf="@id/eur" />

    <TextView
        android:id="@+id/usdValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/usd"
        app:layout_constraintStart_toStartOf="@id/usd"
        app:layout_constraintTop_toBottomOf="@id/usd" />

    <TextView
        android:id="@+id/tix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tix"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/usd"
        app:layout_constraintTop_toTopOf="@id/usd" />

    <TextView
        android:id="@+id/tixValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/tix"
        app:layout_constraintStart_toStartOf="@id/tix"
        app:layout_constraintTop_toBottomOf="@id/tix" />

    <ImageView
        android:id="@+id/cardPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tix"
        app:layout_constraintStart_toStartOf="@id/eur"
        app:layout_constraintTop_toBottomOf="@id/eurValue" />

</androidx.constraintlayout.widget.ConstraintLayout>